--- a/BillManager/BillManager/BillManager.csproj
+++ b/BillManager/BillManager/BillManager.csproj
@@ -11,4 +11,15 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="Views\Category\Index.cshtml">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+      <Content Update="Views\Category\Create.cshtml">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
